--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,16 @@
       ]
     }
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "browser.js"
+      ]
+    }
+  ],
   "icons": {
     "128": "icon_128.png",
     "16": "icon_16.png"
