--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
   "update_url": "https://clients2.google.com/service/update2/crx",
-  "app": {
-    "background": {
-      "scripts": [
-        "main.js"
-      ]
-    }
+  "background": {
+    "service_worker": [
+      "main.js"
+    ]
   },
   "content_scripts": [
     {
@@ -22,7 +20,7 @@
     "16": "icon_16.png"
   },
   "version": "5.1",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "minimum_chrome_version": "31.0.0.0",
   "name": "Sample test kiosk App",
   "permissions": [
