--- a/manifest.json
+++ b/manifest.json
@@ -1,36 +1,19 @@
 {
-  "update_url": "https://clients2.google.com/service/update2/crx",
-  "background": {
-    "service_worker": [
-      "main.js"
-    ]
-  },
-  "externally_connectable": {
-    "accepts_tls_channel_id": false,
-    "matches": [
-      "*://google.com/*"
-    ]
-  },
-  "content_scripts": [
-    {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "browser.js"
-      ]
-    }
-  ],
-  "icons": {
-    "128": "icon_128.png",
-    "16": "icon_16.png"
-  },
-  "version": "5.1",
-  "manifest_version": 3,
-  "minimum_chrome_version": "31.0.0.0",
-  "name": "Sample test kiosk App",
-  "permissions": [
-    "webview"
-  ],
-  "kiosk_enabled": true
+    "background": {
+        "service_worker": "main.js"
+    },
+    "externally_connectable": {
+        "accepts_tls_channel_id": false,
+        "matches": [
+            "<all_urls>"
+        ]
+    },
+    "icons": {
+        "128": "icon_128.png",
+        "16": "icon_16.png"
+    },
+    "version": "5.1",
+    "manifest_version": 3,
+    "minimum_chrome_version": "31.0.0.0",
+    "name": "Teste Iframe"
 }
